<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/app_white"
    android:clickable="true"
    tools:context="com.showcase_gig.net07_birdview.fragment.StartFragment">

    <TextView
        android:id="@+id/start_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/start_label"
        android:textSize="32sp"/>
    <ImageView
        android:id="@+id/start_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/how_to_image"/>
    <TextView
        android:id="@+id/start_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/start_exp"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_button"
        android:textColor="@color/app_white"
        android:background="@drawable/blue_button"/>
</LinearLayout>
